--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chess Game</title>
+    <title>Centuar AI</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -229,7 +229,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>♔ Advanced Chess Game - AI Learning Edition ♛</h1>
+        <h1>♔ Chess Game ♛</h1>
         
         <div class="game-info">
             <div class="info-section">
